--- a/bibliography.bib
+++ b/bibliography.bib
@@ -327,6 +327,65 @@
     year={2021}
 }
 
+@book{Patterson,
+	author    = {David A. Patterson, Garth Gibson, Randy H. Katz}, 
+	title     = {{A Case of Redundant Arrays of Inexpensive Disks}},
+	publisher = {Department of Electrical Engineering and Computer Sciences, University of California},
+	year      = {1988},
+	url = {https://www2.eecs.berkeley.edu/Pubs/TechRpts/1987/CSD-87-391.pdf}
+}
+
+@online{WikiHA,
+    title = {{High availability}},
+    url = {https://en.wikipedia.org/wiki/High_availability},
+    urldate = {2022-06-10},
+    year={2022}
+}
+
+@online{Gregorchenko,
+    title = {{Репликация данных}},
+    url = {https://highload.today/replikatsiya-dannykh/},
+    urldate = {2022-06-12},
+    year={2022}
+}
+
+@online{PostrgreSQL1,
+    title = {{Как настроить репликацию в PostgreSQL}},
+    url = {https://selectel.ru/blog/tutorials/how-to-set-up-replication-in-postgresql/},
+    urldate = {2022-06-12},
+    year={2022}
+}
+
+@online{Prometheus-vs-Zabbix,
+    title = {{Prometheus vs Zabbix}},
+    url = {https://www.metricfire.com/blog/prometheus-vs-zabbix/},
+    urldate = {2022-06-12},
+    year={2022}
+}
+
+@article{Baron,
+	author = {Барон Г.Г.},
+	journal = {Системы управления базами данных},
+	number = {2},
+	year = {1995},
+	title = {Параллельные архитектуры серверов баз данных},
+	url = {https://www.osp.ru/dbms/1995/02/13031421#part_4}
+}
+
+@book{Aristov,
+	author    = {{Аристов Е.Н.}},
+	title     = {{PostgreSQL 13. Тюнинг, Kubernetes, облака.}},
+	publisher = {ООО "Сам Полиграфист"},
+	year      = 2021,
+}
+
+@online{Klyukin, 
+    title = {{Управление высокодоступными PostgreSQL кластерами с помощью Patroni}},
+    author = {А.Клюкин, А.Кукушкин},
+    url = {https://habr.com/ru/post/504044/},
+    urldate = {2022-06-12},
+    year={2022}
+}
 
 @online{Greenplum,
 	title = {{Greenplum DB}},
