--- a/part/statistical.tex
+++ b/part/statistical.tex
@@ -2,57 +2,60 @@
 
 Инфы про статистические базы данных на русском языке мало и большая часть бредовая. Гуглите statistical database. Все источники будут на английском, переведено специально для вас. Источников несколько \cite{ComputerSecurity2008} \cite{IntroBD2014}, под конец была найдена статья, \cite{SDB1989} в которой есть вся собранная инфа.
 
-\subsection{Общие сведения}.
+\subsection{Общие сведения}
 Определение статистической БД. Классификация статистических БД. Характеристики статистических БД.
 
-Статистической (в приведенном здесь контексте) называется база данных, в которой допускаются запросы с обобщением данных (суммированием, вычислением среднего значения и т.д.), но не допускаются запросы по отношению к элементарным данным. Например, в статистической базе данных разрешается выдача запроса "Какова средняя зарплата программистов?", тогда как выдача запроса "Какова зарплата программиста Мэри?" запрещена.
-Проблема статистических баз данных заключается в том, что иногда с помощью логических заключений на основе выполнения разрешенных запросов можно вывести ответ, который прямо может быть получен только с помощью запрещенного запроса. "Обобщенные значения содержат следы исходной информации, и она может быть восстановлена злоумышленником после соответствующей обработки этих обобщенных значений. Такой процесс называется логическим выводом конфиденциальной информации".
-Практически для любой статистической базы данных всегда может быть определен общий трекер (в отличие от множества индивидуальных трекеров). Общий трекер (general tracker) — это логическое выражение, которое может быть использовано для поиска ответа на любой запрещенный запрос, т.е. запрос, включающий недопустимое логическое выражение. (В противоположность этому индивидуальный трекер работает только на основе запросов, включающих конкретные запрещенные выражения.)
-Требуется поддерживать баланс между репрезентативностью данных и конфиденциальностью отдельных записей.
+\paragraph{Определение статистической БД}
+Статистической (в приведенном здесь контексте) называется база данных, в которой допускаются запросы с обобщением данных (суммированием, вычислением среднего значения и т.д.), но не допускаются запросы по отношению к элементарным данным. Например, в статистической базе данных разрешается выдача запроса "Какова средняя зарплата программистов?", тогда как выдача запроса "Какова зарплата программиста Мэри?" запрещена. Например, в СУБД PostreSQL есть набор агрегирующих запросов для получения статистических данных.
+Угрозой безопасности статистических баз данных является то, что с помощью логических заключений на основе результатов выполнения разрешенных запросов можно вывести ответ, который прямо может быть получен только с помощью запрещенного запроса. "Обобщенные значения содержат следы исходной информации, и она может быть восстановлена злоумышленником после соответствующей обработки этих обобщенных значений. Такой процесс называется логическим выводом конфиденциальной информации".
+Практически для любой статистической базы данных может быть определен общий трекер (в отличие от множества индивидуальных трекеров). Общий трекер (general tracker) — это логическое выражение, которое может быть использовано для поиска ответа на любой запрещенный запрос, т.е. запрос, включающий недопустимое логическое выражение. (В противоположность этому индивидуальный трекер работает только на основе запросов, включающих конкретные запрещенные выражения)
+Таким образом, для обеспечения безопасности конфиденциальных данных в статистической БД требуется поддерживать баланс между репрезентативностью хранимой информации и конфиденциальностью отдельных записей.
 
-\subsection{Классификация}
+\paragraph{Классификация статистических БД}
 Классифицирует по следующим признакам:
 \begin{itemize}
 
-    \item Чисто статистическая база данных - Обычная база данных со статистическим доступом
+    \item Чисто статистическая база данных - обычная база данных со статистическим доступом
 
-этот тип базы данных хранит только статистические данные. Примером может служить база данных переписи населения.
-этот тип базы данных содержит отдельные записи. Кроме того, база данных поддерживает набор статистических пользователей, которым разрешены только статистические запросы. Для этих последних пользователей совокупная статистика, основанная на базовых необработанных данных, генерируется в ответ на запрос пользователя или может быть предварительно вычислена и сохранена как часть базы данных.
+Чисто статистическая база данных хранит только уже обработанные статистические данные. Примером может служить база данных переписи населения.
+Обычная БД содержит отдельные записи. Кроме того, обычная база данных поддерживает набор статистических пользователей, которым разрешены только статистические запросы. Для этих пользователей совокупная статистика, основанная на базовых необработанных данных, генерируется в ответ на запрос пользователя или может быть предварительно вычислена и сохранена как часть базы данных.
 
     \item Оффлайн-Онлайн
 
-В онлайн-SDB существует прямое взаимодействие пользователя с данными в режиме реального времени через терминал. В автономном SDB пользователь не контролирует обработку данных и не знает, когда выполняется его запрос данных. В этом режиме методы защиты, отслеживающие профили пользователей, становятся более громоздкими. Компромиссные методы, требующие большого количества запросов (например, метод компромисса на основе регрессии, см. Раздел 7), также усложняются при работе в автономном режиме.
+В онлайн-SDB (Statistical DataBase) существует прямое взаимодействие пользователя с данными в режиме реального времени через терминал. В автономной SDB пользователь не контролирует обработку данных и не знает, когда выполняется его запрос данных. В этом режиме методы защиты, отслеживающие поведение профилей пользователей, становятся более громоздкими. Методы компрометации, требующие большого количества запросов, также усложняются при работе в автономном режиме.
 
-    \item Статическая-Динамический
+    \item Статическая-Динамическая
 
-Статическая база данных-это такая база данных, которая никогда не меняется после ее создания. Большинство баз данных переписи являются статическими. Всякий раз, когда создается новая версия базы данных, эта новая версия считается другой статической базой данных. В отличие от этого, динамические базы данных могут изменяться непрерывно. Эта особенность может значительно усложнить проблему безопасности, поскольку частые выпуски новых версий могут позволить ищейкам использовать различия между версиями способами, которые трудно предвидеть. Методы возмущения данных могут не подходить для динамических СДБ, так как усилия по преобразованию исходного СДБ в возмущенный могут стать непомерными.
+Статическая база данных~--- это такая база данных, которая никогда не меняется после ее создания. Большинство баз данных переписи являются статическими. Всякий раз, когда создается новая версия базы данных, эта новая версия считается другой статической базой данных (в отличие от динамических баз дынных, которые могут изменяться непрерывно). Эта особенность может значительно усложнить проблему защиты статической БД, поскольку частые выпуски новых версий могут позволить злоумышленнику использовать различия между версиями различными способами, которые трудно предвидеть. Методы защиты путем возмущения данных (см. далее) могут не подходить для динамических СДБ, так как усилия по преобразованию исходного СДБ в возмущенный в режиме реального времени могут стать непомерными.
 
-    \item Централизованный-Децентрализованный
+    \item Централизованная-Децентрализованная
 
-В централизованном SDB есть одна база данных. В децентрализованном (распределенном) SDB перегруженные подмножества базы данных хранятся на различных узлах, Соединенных коммуникационной сетью. Распределенная база данных может быть полностью реплицирована, частично реплицирована или секционирована. Проблема безопасности распределенного SDB является более сложной, чем проблема централизованного SDB из-за необходимости дублировать на каждом узле накладные расходы по контролю безопасности, а также трудности интеграции профилей пользователей.
-Выделенная-общая компьютерная система в выделенной SDB компьютерной системе используется исключительно для обслуживания приложений SDB. В общей системе приложения SDB работают на одной аппаратной системе с другими приложениями (возможно, с использованием различных баз данных). Общую среду защитить сложнее, так как другие приложения могут вмешиваться в защищаемые данные непосредственно через операционную систему, минуя механизм безопасности SDB.
+В централизованной SDB есть один объект базы данных. В децентрализованной (распределенной) SDB перекрывающиеся подмножества базы данных хранятся на различных узлах, соединенных коммуникационной сетью. Распределенная база данных может содержать полностью дублированные данные, частично дублированные или полностью разделенные. Проблема безопасности распределенной SDB является более сложной, чем проблема централизованной SDB из-за необходимости дублировать на каждом узле накладные расходы по контролю безопасности, а также из-за трудностей по отслеживанию и контролю профилей пользователей.
+
+	\item Выделенная-общая компьютерная система
+
+В выделенной для SDB компьютерной системе обслуживаются исключительно приложения для работы с SDB. В общей системе приложения SDB работают на одной аппаратной платформе с другими приложениями (возможно, использующие различные базы данных). Общую среду защитить сложнее, так как другие приложения могут вмешиваться в защищаемые данные непосредственно через операционную систему, минуя механизм безопасности SDB.
 \end{itemize}
 \subsection{Угрозы статистических БД}
 
-Об безопасности в статистических БД  Деннинг [16.6]
+О безопасности в статистических БД  Деннинг [16.6]
 \begin{grayquote}
-"методы нарушения защиты данных просты и не связаны с большими расходами. Поэтому требование обеспечения полной секретности конфиденциальной информации несовместимо с требованием возможности вычисления точных статистических показателей для произвольных подмножеств данных в базе. По крайней мере одно из этих требований должно быть снято прежде, чем можно будет поверить в гарантии обеспечения секретности.
+"Методы нарушения защиты данных просты и не связаны с большими расходами. Поэтому требование обеспечения полной секретности конфиденциальной информации несовместимо с требованием возможности вычисления точных статистических показателей для произвольных подмножеств данных в базе. По крайней мере одно из этих требований должно быть снято прежде, чем можно будет поверить в гарантии обеспечения секретности."
 \end{grayquote}
-То есть существует мнение, что нельзя нормально обезопасить СБД.
+Таким образом, существует мнение, что нельзя нормально обезопасить СБД.
 
-Основная проблема СБД -- проблема вывода.
-В общих чертах, проблема вывода для SDB может быть сформулирована следующим образом. Характеристическая функция C определяет подмножество записей (строк) в базе данных. Запрос, использующий C, предоставляет статистику по выбранному подмножеству. Если подмножество достаточно мало, возможно, даже одна запись, спрашивающий может быть в состоянии сделать вывод о характеристиках одного человека или небольшой группы. Даже для больших подмножеств характер или структура данных могут быть такими, что несанкционированная информация может быть выпущена.
-Для злоумышленика, который пытается достать индивидуальные данные задача состоит в том, чтобы сделать общий трекер.
+Основная уязвимость для несанкционированного доступа к данным в СБД -- проблема вывода.
+В общих чертах, проблема вывода для SDB может быть сформулирована следующим образом. Характеристическая функция C определяет подмножество записей (строк) в базе данных. Запрос, использующий C, предоставляет статистику по выбранному подмножеству. Если подмножество достаточно мало, возможно, даже одна запись, спрашивающий может быть в состоянии сделать вывод о характеристиках одного человека или небольшой группы. Даже для больших подмножеств характер или структура данных могут быть такими, что информация, доступа к которой быть не должно, может быть получена злоумышленником.
+Для злоумышленика, который пытается достать индивидуальные данные, задача состоит в том, чтобы сделать общий трекер.
 Нужно придумать такую последовательность запросов, чтобы вывести индививидуальную информацию.
-Суть в том, что можно набрать несколько запросов и проделать операции над ними там, чтобы деанонить записи.
 
-Например для статичной СБД можно сделать такое
+Например, для статичной СБД можно реализовать подобную атаку:
 
-запрос1: выдать a1 + a2 + a3, запрос2: выдать a1 + a2. запрос1 - запрос2 = a3.
+Запрос1: выдать a1 + a2 + a3. Запрос2: выдать a1 + a2. Запрос1 - Запрос2 = a3.
 
-Для динамической онлайн СБД
-Мы хотим достать зарплату Мэри. Знаем, что ей 20 лет. Записываем в базу много левых записей с возрастом = 20 лет и нулевой зарплатой. Делаем запрос с минимальной агрегацией людей с возврастом 20 лет. Таким образом можно узнать возможную зп Мэри. Чем больше исходных знаний есть о Мэри, тем точнее получим данные.
-Также не стоит забывать что речь идет о БД. Поэтому статистическая БД наследует все опасности обычных БД.
+Для динамической онлайн СБД атака может иметь подобную модель:
+Злоумышленник хочет узнать зарплату Мэри. Он знает, что ей 20 лет. Он записываем в базу много "пустых" записей с возрастом = 20 лет и нулевой зарплатой. Злоумышленник делает запрос с минимальной агрегацией людей с возврастом 20 лет. Таким образом можно узнать возможную зарплату Мэри. Чем больше исходных знаний есть о Мэри, тем точнее получатся данные.
+Также не стоит забывать что речь идет о БД. Поэтому статистическая БД наследует все угрозы обычных БД.
 
   \subsection{Защита в статистических БД}
 
@@ -63,7 +66,7 @@
 	\item возмущение данных;
 	\item возмущение вывода;
 \end{itemize}
-На рисунке \ref{fig:SDB_secure} изображена схема 3 подходов.
+На рисунке \ref{fig:SDB_secure} изображена схема 3 подходов: ограничение запросов, возмущение данных, возмущение вывода.
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{assets/SDB_secure_method.png}
@@ -72,44 +75,88 @@
 \end{figure}
 \paragraph{Концептуальный}
 
-Основная проблема в том, что вся реляционная алгебра позволяет выводить индивидуальные данные. Концептуальный подход предлагает заменить классическую систему реляционной БД работающую с индивидуальными данными.
-Основной подход:
-Partitioning of the data base -- Записи хранятся не отдельно, а агрегировано и обезличино. Судя по-всему похоже на microagregation.
-Microaggregation -- есть исходные данные, выделим несколько записей, посчитаем для них средние значения, заменим значения записей полученным средним, повторить для остальных записей в исходных данных
+Основная проблема защиты статистических БД в том, что вся реляционная алгебра, которую различным образом реализуют языки манипуляции данными, позволяет выводить индивидуальные данные. Концептуальный подход предлагает заменить классическую схему взаимодействия с данными реляционной БД. Для этого были описаны качественные требования к фреймворку, реализующему новую логику взаимодействия:
+\begin{enumerate}
+  \item Необходимо учитывать категории данных в таблицах (например, категоризация людей по профессии)
+  \item Необходимо принимать во внимание динамически изменяемые данные и угрозы, связанные с этим
+  \item Необходимо учитывать знания, полученныые каждым пользователем после запросов
+  \item Необходимо учитывать возможный вывод информации (в общем случае или с учетом знаний пользователя)
+\end{enumerate}
 
-Еще один способ -- решетчатая модель. Агрегация данных по разным признакам на разном уровне детализации.
+Для выполнения требований в основном используется создание единицы неразложимой подгруппы данных (subpopulation). В таких объектах содержаться 0 или больше двух реальных записей. Определение такой подгруппы контролируется DBA. В определении подгруппы содержится информация о разрешенных типах статистических запросов для каждого атрибута и ограничения, связанные с обновлением данных. В ядре фреймворка есть процесс, отслеживающий знания группы пользователей, полученные из предыдущих запросов. Также используется процесс отслеживания знаний пользователя при динамических операциях с данными в БД. Все процессы имеют связь с помощью сообщений с DBA.
 
-Ну и естественно не забываем про классические способы.
-Access Restriction - пусть вы доктор, тогда вам можно всё. А исследователям и прочим анонам даём только некоторые записи или даже готовые стат.результаты по данным (агрегация)
+Еще один способ концептуального подхода -- использование решетчетой модели, который заключается в агрегации данных по разным признакам на разном уровне детализации (то есть выделение отдельных таблиц с меньшим количеством атрибутов и с одним или более одинаковыми признаками (берем общее поле, например пол, и все записи одникового пола переносим в отдельные таблицы)).
+
+Классический способ (не защищающий от вывода данных) -- для пользователей с доступом к персональным данным доступны все запросы. А исследователям статистики и прочим пользователям без доступа к персональным данным выдается доступ только к некоторым записям или готовым статистическим результатам (агрегация).
 
 \paragraph{Ограничение запросов}
 
-Query Set Restriction -- Ограничение на минимальный размер выдаваемой выборки.
+Для ограничения запросов используется 5 стандартных методов: ограничение размера выдаваемой выборки, контроль перекрытия результатов, аудит, подавление ячеек и разделение.
 
-Limiting intersection of query sets --  Метод защиты блокирует такие запросы которые приводят к выводу данных через пересечение множеств запросов.
-Сохранение исторических сведений о результатах выполнения запросов и отклонение любых запросов, использующих значительное количество исходных данных, обработанных предыдущим запросом.
-Auditing - ведём логи, ловим негодяев и всяких подознительных
+\begin{enumerate}
+
+  \item Ограничение размера выборки
+
+Это ограничение требует параметр K, который задается администратором БД. Размер C выдаваемой выборки удовлетворяет условию (L - общее число записей):
+
+\begin{displaymath}
+K \leq C \leq L - K, \quad K < L/2
+\end{displaymath}
+
+  \item Контроль перекрытия запросов
+
+Зачастую для вывода данных используется перекрытие запросов. Поэтому необходимо ограничить количество перекрывающихся записей. Однако на практике это не защищает от сотрудничества нескольких пользователей, ограничивая полезные функций БД и увеличивая сложность сравнения результатов запросов.
+
+  \item Аудит
+
+Метод заключается в сохранении запросов пользователя и анализе на возможность компрометации. Сложность, связанная с вычислительной нагрузкой, остается.
+
+  \item Разделение
+
+Основная идея разделения -- это перегруппировка на непересекающиеся множества, объединенные некоторым признаком, называемые атомарными множествами.
+
+  \item Подавление ячеек
+
+Подавление ячеек -- это сокрытие информации в ячейках, которые могут привести к раскрытию конфиденциальной информации. Кроме того, есть дополнительное подавление -- когда скрывают ячейки с неконфиденциальной информацией, которые могут косвенно использоваться для раскрытия конфиденциальной информации.
+
+\end{enumerate}
+
+Стоит отметить, что ни один из предложенных методов не дает универсальное решение.
 
 \paragraph{Возмущение данных}
 
-Data Perturbation -- добавим небольшой, случайный шум. Тогда точные данные вроде как и будут уничтожены, но можно заиграться и исказить репрезентативность
+Методы возмущения данных делятся на две категории: категория распределения вероятностей и категория возмущения фиксированных данных. Первые из них рассматривают данные как распределение вероятностей и подменяют исходные данные на новые таблицы, сгенерированные на основе полученного распределения. Вторые вычисляют статистику фиксированных данных и на основе статистики раз и навсегда возмущают имеющиеся данные. Для возмущения данных требуется специально преобразованная для статистических исследований исходная база данных. Важно отметить, что при возмущении данных могут меняться условные средние значения и частоты, что является негативным последствием.
 
+\begin{enumerate}
+  \item Распределение вероятностей
+
+Для этой категории существует два основных метода: использование исходной выборки и выборки, полученной из распределения вероятностей исходной, и замена исходной БД на ее распределение вероятностей.
+
+  \item Возмущение фиксированных данных
+
+Возмущение происходит только для числовых или категорезированных данных.
+
+\end{enumerate}
+
+
+Рассмотрим два конкретных метода возмущения данных.
 Случайное добавление дополнительных строк к основному набору данных, обрабатываемому запросом.
-Также предлагается организовать "обмен данными" ("data swapping"), т.е. обмен значениями атрибутов между кортежами, осуществляемый таким образом, чтобы поддерживалась лишь статистическая точность. При этом даже если злоумышленнику удастся идентифицировать отдельное значение (например, некоторое значение зарплаты), то у него не будет способа узнать, какому именно кортежу (в нашем примере — сотруднику) оно принадлежит. Сложность этого подхода заключается в необходимости отыскать множество тех записей, между которыми можно будет организовать обмен значениями соответствующим образом. Подобные затруднения имеют место и при использовании большинства других методов.
+Второй способ -- "обмен данными" ("data swapping"), т.е. обмен значениями атрибутов между кортежами, осуществляемый таким образом, чтобы поддерживалась лишь статистическая точность. При этом даже если злоумышленнику удастся идентифицировать отдельное значение (например, некоторое значение зарплаты), то у него не будет способа узнать, какому именно кортежу (в нашем примере — сотруднику) оно принадлежит. Сложность этого подхода заключается в необходимости отыскать множество тех записей, между которыми можно будет организовать обмен значениями соответствующим образом. Подобные затруднения имеют место и при использовании других методов.
 
 \paragraph{Возмущение вывода}
 
-Output Perturbation -- как предыдущее, но преобразовывать будем результат каждого запроса
-Random Sampling -- сделать так, чтобы один и тот же запрос давал каждый раз разные наборы записей
-Использование для ответов на запросы только случайных наборов исходных данных
+Отмеченная проблема изменения статистически важных данных условных средних значений частот не так серьезна в этом случае, так как возмущение накладывается на уже выходные данные.
 
-\paragraph{Критерии безопасности}
-Как было сказано гарантированной безопасности в СДБ не добиться. Поэтому делают оценку важности деанонимизированных данных и статистической точности (из-за наших всех действий для защиты данных)
+Для того, чтобы определить выходную выборку, каждая запись проходит через функцию, которая с некоторой ненулевой вероятностью помещает запись в выходную выборку. Эта вероятность может корректироваться администратором базы данных.
 
-Security -- сферическая вероятность раскрыть (в том числе частично) запись в сбд
-Для каждого разрешенного агрегирующего запроса оценивается критерий безопасности. На основе количества инфы в базе можно подсчитать сколько тех или иных запросов нужно сделать для деанонимизации. На основе этого расчитывается минимальная выборка для таких запросов.
+  \subsection{Критерии безопасности}
 
-Consistency -- оценивается консистентность данных для методов возмущения данных. Оценивается степень возмущения данных. Создаем агрегирующий запрос и замеряем его изменения после внесенных возмущений.
-Robustness -- оценка зависимости между возмущением и конкретной записью. Было бы круто чтобы возмущение не было зависимо от данных, но нужно каким-то образом сохранить ее статистические свойства.
+Как было сказано, гарантированной безопасности в СДБ не добиться. Поэтому оценивается степень деанонимизированности данных и статистического соответствия исходным данным.
 
-Costs -- Назначаем каждому запросу конкретную цену. Пользователю даем начальную сумму на которую он может делать запросы, такую чтобы он не смог вывести данные. Выглядит больше как метод, а не критерий.
+Security~--- вероятность раскрыть (в том числе частично) запись в СБД. Для каждого разрешенного агрегирующего запроса оценивается критерий безопасности. На основе количества информации в базе можно подсчитать, сколько тех или иных запросов нужно сделать для деанонимизации. На основе этого расчитывается минимальная выборка для таких запросов.
+
+Consistency -- оценивается консистентность данных для методов возмущения данных. Оценивается степень возмущения данных. Для этого создается агрегирующий запрос и замеряется его изменения после внесенных возмущений.
+
+Robustness -- оценка зависимости между возмущением и конкретной записью. Необходимо, чтобы возмущение не было зависимо от данных, но при этом нужно сохранить ее статистические свойства.
+
+Costs -- назначение каждому запросу конкретной цены. Пользователю дается начальная сумма, на которую он может делать запросы, такая, чтобы он не смог вывести данные.
